# ponder

./: LICENSE  README.md  ponder.cabal
Text/: Ponder.hs
Text/Ponder/: Char.hs  Memo.hs  Pos.hs  Prim.hs
examples/: calc.hs  number.hs
